# hello-rust

./: Cargo.toml  README.md  pyproject.toml
hello_rust/: __init__.py  hello_rust.pyi
hello_rust/python/: __init__.py  d1.py  d4.py  d7.py
src/: d1.rs  lib.rs  main.rs  rust_impl.rs
src/rust/: d1.rs  d2.rs
src/rust_impl/: d10.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
src_py/: d1.py  d2.py  d3.py  d5.py  d6.py
src_python/hello_rust/: __init__.py
src_python/hello_rust/python_impl/: __init__.py  d1.py  d10.py  d11.py  d12_slow.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d2.py  d20.py  d22.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py
src_python/hello_rust/rust_impl/: __init__.py  rust_impl.pyi
tests/: test_correctness.py  test_performance.py
