[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "hello-rust"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "maturin==1.4.0",
    "pandas",
    "tqdm",
    "pytest-xdist"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src_python"


[tool.pytest.ini_options]
addopts = "-n 2"
testpaths = [ "tests" ]